--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0"
