--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript", "@tanstack/query"],
+  "rules": {
+    "@tanstack/query/exhaustive-deps": "error"
+  }
 }
